introducing an online users counter; will include hover function with online users in list later

--- a/views/drawing.ejs
+++ b/views/drawing.ejs
@@ -43,6 +43,8 @@ socket.on('authorize', function(name) {
 	<div id="chat">
 		<div id="chat-header">
 			Welcome, <input type="text" id="user" READONLY/>
+			<br>
+			<span id="users-number">0</span> users skeczing
 			<hr>
 		</div>
 
